[project]
name = "pannuke"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.0",
]
